bug of overflow

--- a/assets/sass/_content-area.scss
+++ b/assets/sass/_content-area.scss
@@ -8,12 +8,14 @@
 
     @include responsive(phone-big) {
         margin: 0 auto;
+        overflow: hidden;
 
 
     }
 
     @include responsive(phone) {
         margin: 0 auto;
+        overflow: hidden;
 
 
     }
@@ -372,8 +374,6 @@
             @include responsive(phone) {
                 width: 60%;
                 margin: 0 5px;
-
-
                 overflow: hidden;
 
             }
@@ -391,6 +391,16 @@
 
                 .move {
                     padding-left: 20px;
+                }
+
+                .thead,
+                tbody {
+
+
+                    @include responsive(phone and phone-big) {
+
+                        overflow-x: scroll;
+                    }
                 }
 
                 th {
@@ -483,26 +493,27 @@
         }
 
     }
-
-    // @media screen and (max-width: 768px) {
-
-    //     #content-area {
-    //         margin: 3rem 1rem;
-    //         // margin: 0 auto;
-
-
-    //         .gridx2 {
-    //             
-    //             // grid-template-rows: repeat(3, 1fr);
-
-    //             grid-column-gap: 1rem;
-    //             // overflow: hidden;
-
-    //         }
-    //     }
-
-
 }
+
+// @media screen and (max-width: 768px) {
+
+//     #content-area {
+//         margin: 3rem 1rem;
+//         // margin: 0 auto;
+
+
+//         .gridx2 {
+//             
+//             // grid-template-rows: repeat(3, 1fr);
+
+//             grid-column-gap: 1rem;
+//             // overflow: hidden;
+
+//         }
+//     }
+
+
+
 
 
 
