--- a/assets/sass/_navhead.scss
+++ b/assets/sass/_navhead.scss
@@ -136,7 +136,7 @@ body {
             color: $greyDarkfont2;
             font-size: 1rem;
             text-decoration: none;
-            padding: 15px 30px;
+            padding: 15px 20px;
             font-weight: 300;
             transition: all .3s ease-in-out;
 
